# happybarra

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.prod.backend  Dockerfile.prod.frontend  README.md  app.py  back-end-app.py  docker-compose.prod.yaml  docker-compose.yaml  front-end-app.py  pyproject.toml  streamlit_app.py
front-end/: create_credit_card_instance.py  credit_card_installment.py  login.py
happybara/: models.py
happybarra/: __main__.py  banks.py  credit_cards.py  enums.py  models.py  network.py  networks.py  registries.py  registry.py  utils.py
happybarra/backend/: debug_logging_conf.yaml  dependencies.py  main.py
happybarra/backend/app/: main.py
happybarra/backend/data/: credit_cards.yaml
happybarra/backend/routers/: banks.py  credit_cards.py  dues.py  savings.py  security.py
happybarra/backend/services/: helpers.py
happybarra/frontend/: README.md  app.py  debug_logging_conf.yaml
happybarra/frontend/data/: banks.py  credit_cards.py  networks.py
happybarra/frontend/models/: __init__.py  models.py
happybarra/frontend/page/: add_credit_card.py  dues_tracker.py  home.py  installment_schedule.py  login.py  logout.py  manage_credit_cards.py  manage_dues.py  savings_schedule.py
happybarra/frontend/pages/: add_credit_card.py  create_credit_card_instance.py  credit_card_installment.py  dues_tracker.py  home.py  installment_schedule.py  login.py  logout.py  manage_credit_cards.py  (+1 more)
notebooks/: testing_out_supabase.ipynb
page/: credit_card_installment.py
sl_pages/: credit_card_installment.py  credit_card_instance.py  home.py
test/: test_models.py
(+9 files in other folders)
