[project]
name = "happybara"
version = "0.1.0"
description = "do i have enough money for this?"
authors = [
    {name = "mbalmeo@hawitsu.xyz"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
