[project]
name = "happybara"
version = "0.1.0"
description = "do i have enough money for this?"
authors = [
    {name = "mbalmeo@hawitsu.xyz"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.12"
pytest-cov = "^6.0.0"

